content/nomad/v2.0.x/content/tools/autoscaling/plugins/apm/nomad.mdx
---
layout: docs
page_title: 'Autoscaling Plugins: Nomad API'
description: The "nomad-apm" APM plugin queries the Nomad API for metrics.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-16T16:54:44.000Z
last_modified: 2026-02-16T16:54:44.000Z
# END AUTO GENERATED METADATA
---

# Nomad APM Plugin

The Nomad APM plugin allows querying the Nomad API for metric data. This provides
an immediate starting point without addition applications but comes at the price
of efficiency and flexibility. When using this APM, it is advised to monitor
Nomad carefully ensuring it is not put under excessive load pressure.

Since Nomad does not store historical metric data and only reports instant
metrics values, the Nomad APM plugin does not support the [`query_window`][]
policy option and is not able to aggregate metrics over time, such as computing
averages or percentiles. An external APM is required to support uses cases like
these.

~> The Nomad APM plugin should only be used when scaling based on CPU and
memory usage. For more advanced scenarios, such as scaling a cluster to
zero clients, you should use a different APM plugin.

## Agent Configuration Options

```hcl
apm "nomad-apm" {
  driver = "nomad-apm"
}
```

When using a Nomad cluster with ACLs enabled, following ACL policy will provide the appropriate
permissions for obtaining task group metrics:

```hcl
namespace "default" {
  policy       = "read"
  capabilities = ["read-job"]
}
```

In order to obtain cluster level metrics, the following ACL policy will be required:

```hcl
node {
  policy = "read"
}

namespace "default" {
  policy       = "read"
  capabilities = ["read-job"]
}
```

## Policy Configuration Options - Task Groups

The Nomad APM allows querying Nomad to understand the current resource usage of
a task group.

```hcl
check {
  source = "nomad-apm"
  query  = "avg_cpu"
  # ...
}
```

Querying Nomad task group metrics is be done using the `<operation>_<metric>`
syntax, where valid operations are:

- `avg` - returns the average of the metric value across allocations in the task
  group.

- `min` - returns the lowest metric value among the allocations in the task group.

- `max` - returns the highest metric value among the allocations in the task
  group.

- `sum` - returns the sum of all the metric values for the allocations in the
  task group.

The metric value can be:

- `cpu` - CPU usage as reported by the `nomad.client.allocs.cpu.total_percent`
  metric.

- `cpu-allocated` - the percentage of CPU used out of the total CPU allocated
for the allocation.

- `memory` - Memory usage as reported by the `nomad.client.allocs.memory.usage`
  metric.

- `memory-allocated` - the percentage of memory used out of the total memory
allocated for the allocation.

## Policy Configuration Options - Client Nodes

The Nomad APM allows querying Nomad to understand the current allocated resource
as a percentage of the total available.

~> **Note:** When using the Nomad APM plugin for cluster scaling, your policy
`target` must define at least one node pool identifier (`node_class`,
`datacenter`, or `node_pool`) to specify which nodes are included in resource
calculations. When you combine multiple identifiers, only nodes matching all
criteria are included. Nodes without a `node_class` are evaluated using the
default class value `autoscaler-default-pool`.

```hcl
policy {
  # ...
  check {
    source = "nomad-apm"
    query  = "percentage-allocated_cpu"
    # ...
  }

  target "..." {
    # ...
    node_class = "compute"
    # ..
  }
}
```

### Node pool identifiers

The following target configuration parameters control which Nomad client nodes
the APM plugin includes when calculating resource usage. You can specify one or
more identifiers to filter nodes. When you combine multiple identifiers, the
plugin applies AND logic and only includes nodes that match all specified
criteria.

- `node_class` `(string: "")` - The Nomad [client node class][nomad_node_class]
  identifier used to group nodes into a pool of resource.

- `datacenter` `(string: "")` - The Nomad client
  [datacenter][nomad_datacenter] identifier used to group nodes into a pool of
  resource.

- `node_pool` `(string: "")` - The Nomad [client node pool][nomad_node_pool]
  identifier used to group nodes into a pool of resource.

The `query` value remains the `<operation>_<metric>` format. Filtering is
derived from the target configuration automatically.

#### Combined filter example

The following policy targets only nodes that match all three identifiers:

```hcl
target "aws-asg" {
  aws_asg_name        = "prod-compute-us-east-1a"
  node_pool           = "production"
  datacenter          = "us-east-1a"
  node_class          = "compute"
  node_drain_deadline = "5m"
}
```

#### Single node pool example

You can use `node_pool` alone without setting `node_class`:

```hcl
target "aws-asg" {
  aws_asg_name = "prod-default-pool"
  node_pool    = "default"
}
```

### Query syntax

Querying Nomad client node metrics is done using the `<operation>_<metric>`
syntax, where valid operations are:

- `percentage-allocated` - returns the allocated percentage of the desired
  resource.

The metric value can be:

- `cpu` - allocated CPU as reported by calculating total allocatable against the
  total allocated by the scheduler.

- `memory` - allocated memory as reported by calculating total allocatable against
  the total allocated by the scheduler.

[nomad_telemetry_block]: /nomad/docs/configuration/telemetry#inlinecode-publish_allocation_metrics
[`query_window`]: /nomad/tools/autoscaling/policy#query_window
[nomad_node_class]: /nomad/docs/configuration/client#node_class
[nomad_datacenter]: /nomad/docs/configuration#datacenter
[nomad_node_pool]: /nomad/docs/configuration/client#node_pool
